# Media-Editor-MCP

./: .gitignore  .mcp.capcut.json.example  .mcp.json  .mcp.json.example  .mcp.premiere.json.example  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
.claude/presets/: moody-rnb.md
.claude/skills/cc-add-effects/: SKILL.md
.claude/skills/cc-create-reel/: SKILL.md
.claude/skills/pp-color-grade/: SKILL.md
.claude/skills/pp-create-reel/: SKILL.md
.claude/skills/pp-create-reel-once/: SKILL.md
.claude/skills/pp-erase-text/: SKILL.md
.claude/skills/pp-lyric-reel/: SKILL.md
.claude/skills/pp-mark-beats/: SKILL.md
.claude/skills/pp-split-scenes/: SKILL.md
_pp/: README.md
_pp/.claude/skills/pp-add-cross-dissolve/: SKILL.md
_pp/.claude/skills/pp-create-reel-once/: SKILL.md
_pp/.claude/skills/pp-mark-beats/: SKILL.md
scripts/: smoke.mjs
src/ccmcp/: draft.py  effect_library.json  effects.py  harvest.py  paths.py  server.py  session.py  translations.json
tests/: smoke.py
