[project]
name = "capcut-mcp"
version = "0.1.0"
description = "CapCut MCP server: build/edit CapCut drafts on disk, effects-first (offline draft JSON via pycapcut)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "mcp>=1.12.0",
    "pyCapCut>=0.0.3",
]

[project.scripts]
capcut-mcp = "ccmcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ccmcp"]
